--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+server.port=4444
+server.servlet.context-path=/share-doc
+authServer.url=http://localhost:7777/auth
+spring.datasource.url=jdbc:mysql://34.64.107.41:3306/weboard?characterEncoding=utf8
+spring.datasource.username=weboard
+spring.datasource.password=weboard
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.hikari.minimum-idle=20
+spring.datasource.hikari.maximum-pool-size=40
+mybatis.config-location: classpath:mybatis/configuration.xml
