--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.hikari.minimum-idle=20
 spring.datasource.hikari.maximum-pool-size=40
 mybatis.config-location: classpath:mybatis/configuration.xml
+allowedOrigin=http://localhost:3000
